--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</div>
 							<!-- Boton 1-->
 							<div>
-								<button type="button" class="botoncito btn-xs">See more</button>
+								<button type="button" class="botoncito btn-xs btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Hola!! :)">See more</button>
 							</div>
 						</div>
 					</div>
@@ -221,5 +221,10 @@
 			</div>
 		</div>
 	</footer>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!-- Bootstrap Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
