--- a/index.html
+++ b/index.html
@@ -92,7 +92,22 @@
 					<h2>Save Koalas From Possible Extinction!</h2>
 					<p class="text3">Loss of koala habitat is the major threat facing koalas today. Since white settlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected.</p>
 					<!-- Boton 2-->
-					<button type="button" class="botoncito btn-xs">Read more</button>
+					<button type="button" class="botoncito btn-xs btn btn-success" data-toggle="modal" data-target="#miModal">Read more</button>
+					<!-- Modal -->
+					<div class="modal fade" id="miModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+									<h4 class="modal-title" id="myModalLabel">ERROR 400</h4>
+								</div>
+								<div class="modal-body">Ups!!! Lo siento :S</div>
+							</div>
+						</div>
+					</div>
+
 				</div>
 				<div class="col-md-6 col-xs-12 pag3A">
 					<img src="img/cosita.jpg" class="fotoSec3 img-responsive" alt="fotoPag3">
