Slider - Iconos no se muestran

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 				<div class="col-md-6 col-xs-12 pag3A">
 					<img src="img/cosita.jpg" class="fotoSec3 img-responsive" alt="fotoPag3">
@@ -146,6 +145,42 @@
 				</div>
 			</div>
 		</div>
+
+		<!--Slide -->
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+	  <!-- Indicadores -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#myCarousel" data-slide-to="1"></li>
+		    <li data-target="#myCarousel" data-slide-to="2"></li>
+		  </ol>
+
+		  <!-- Imagenes -->
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active containerFoto">
+		      <img class"d-block img-fluid slideFoto" src="img/uno.jpg" alt="Slide1">
+		    </div>
+
+		    <div class="item containerFoto">
+		      <img class"d-block img-fluid slideFoto" src="img/tres.jpg" alt="Slide2">
+		    </div>
+
+		    <div class="item containerFoto">
+		      <img class"d-block img-fluid slideFoto" src="img/portada.jpg" alt="Slide3">
+		    </div>
+		  </div>
+
+		  <!-- Controles izquierdo y derecho -->
+		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		    <span class="glyphicons glyphicons-chevron-left"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		    <span class="glyphicons glyphicons-chevron-right"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+
 	</section>
 	<!-- SECCIÓN  6-->
 	<section>
