Modal en Seccion 6 - En 2 Donate

--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
 		    <span class="sr-only">Next</span>
 		  </a>
 		</div>
-
 	</section>
 	<!-- SECCIÓN  6-->
 	<section>
@@ -210,7 +209,21 @@
 					<hr>
 					<p class="cen"><strong>PublicAPI access</strong></p>
 					<!-- Boton 3-->
-					<button type="button" class="botoncito btn-xs">DONATE</button>
+					<button type="button" class="botoncito btn-xs btn btn-success" data-toggle="modal" data-target="#miModal2">DONATE</button>
+					<!-- Modal -->
+					<div class="modal fade" id="miModal2" tabindex="-1" role="dialog" aria-labelledby="myModal2Label" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+									<h4 class="modal-title" id="myModal2Label">Tu donación se realizó con éxito.</h4>
+								</div>
+								<div class="modal-body">Gracias!!</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="col-md-4 col-xs-12 pag6B">
 					<p class="cen">Save 2 Koalas per month.</p>
@@ -221,7 +234,21 @@
 					<hr>
 					<p class="cen"><strong>PublicAPI access</strong></p>
 					<!-- Boton 3-->
-					<button type="button" class="botoncito btn-xs">DONATE</button>
+					<button type="button" class="botoncito btn-xs btn btn-success" data-toggle="modal" data-target="#miModal2">DONATE</button>
+					<!--Modal-->
+					<div class="modal fade" id="miModal2" tabindex="-1" role="dialog" aria-labelledby="myModal2Label" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+									<h4 class="modal-title" id="myModal2Label">Tu donación se realizó con éxito.</h4>
+								</div>
+								<div class="modal-body">Gracias!!</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="col-md-4 col-xs-12 pag6B">
 					<p class="cen">Save 3 Koalas per month.</p>
