Collapse - Seccion 6 - Donate

--- a/index.html
+++ b/index.html
@@ -259,9 +259,13 @@
 					<hr>
 					<p class="cen"><strong>PublicAPI access</strong></p>
 					<!-- Boton 3-->
-					<button type="button" class="botoncito btn-xs">DONATE</button>
-				</div>
+					<button type="button" class="btn btn-success botoncito btn-xs" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">DONATE</button>
+					<!-- Collapse-->
+					<div class="collapse" id="collapseExample">
+					  <div class="card card-block">Por el momento no podemos realizar su solicitud.</div>
+					</div>
 
+				</div>
 			</div>
 		</div>
 	</section>
